--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h1 {
     margin-bottom: 10vh;
 }
 
-h2 {
+p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
 }
