--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ h1 {
 }
 
 p {
+    font-size: 1.8em;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
 }
